[package]
name = "gion-gen-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
tokio = { version = "1.25", features = ["full"] }
tokio-stream = "0.1"
# arc4 = "0.1.0"
# rust-crypto = "0.2.36"
rc4 = "0.1.0"
rand_chacha = "0.3.1"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.14"